# seynurwa

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 20251125_001_create_users_table.py  20251125_002_add_emotions_table.py  20251125_003_update_created_at_timezone.py
api/: index.py
auth/application/dtos/: login_dto.py  register_dto.py  token_dto.py  user_dto.py
auth/application/services/: jwt_service.py
auth/application/use_cases/: login_user.py  register_user.py
auth/domain/entities/: user.py
auth/domain/exceptions/: auth_errors.py
auth/domain/value_objects/: __init__.py  email.py  password.py
auth/infrastructure/: __init__.py
auth/infrastructure/api/: routes.py
auth/infrastructure/database/: models.py  repository.py
common/infrastructure/auth/: __init__.py  jwt_auth.py
common/infrastructure/database/: base.py  session.py
emotions/: __init__.py
emotions/application/dtos/: __init__.py  create_emotion_dto.py  emotion_dto.py  streak_dto.py
emotions/application/use_cases/: create_emotion.py  get_streak.py  get_today_emotion.py  list_emotions.py
emotions/domain/: __init__.py
emotions/domain/entities/: emotion.py
emotions/domain/exceptions/: emotion_errors.py
emotions/infrastructure/api/: routes.py
emotions/infrastructure/database/: models.py  repository.py
